# hyperliquid-cli

./: Cargo.toml
src/: main.rs  utils.rs
src/commands/: graph_l2_book.rs  mod.rs  watch_l2_book.rs  watch_trades.rs
