[package]
name = "hyperliquid_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
hyperliquid_rust_sdk = "0.2.2"
log = "0.4.20"
tokio = { version = "1.29.1", features = ["full"] }
crossterm = "0.23.0"
chrono = "0.4.30"
ratatui = "0.23.0"
rand = "0.8.5"
